# ProyectoTEC-Vertiche

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  reindex_contracts.py  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  contracts.py  dashboard.py
backend/app/models/: schemas.py
backend/app/services/: alert_service.py  embedding_service.py  extraction_service.py  rag_service.py  s3_service.py  supabase_service.py  textract_service.py
database/: migration.sql  migration_pgvector.sql  migration_rag_v2.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  ChatWelcome.tsx  ChatWindow.tsx
frontend/src/components/dashboard/: AlertsList.tsx  ExpirationTimeline.tsx  RentChart.tsx  StatsGrid.tsx
frontend/src/components/documents/: AddressMap.tsx  ContractDetail.tsx  ContractTable.tsx  UploadZone.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  scroll-area.tsx  (+8 more)
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useChat.ts  useContracts.ts  useDashboard.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  LoginPage.tsx
